Added birthdate compatability to API and web application
